--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 /toyProblems
 
 
+.moringacodilityquestions.js
+.moringacodilityquestions.rb
+
+
 // Array Methods 
 //filter() method : create new array. 1. function ()  2. Output of items to fill the new array
 //[] filter -> undefined. 
@@ -82,5 +86,7 @@ console.log(numberRight.reduce(getDiff));
 function getDiff(diff,numberRight) { 
    return diff - numberRight;
 }
+
+
 
 
